# ESP32_Project

./: .gitignore  RND info.txt
ESP32ProLC/: desktop.ini  测试指令格式.doc
ESP32ProLC/.metadata/: .log_冲突文件_sang_20240314170640  .log_冲突文件_sang_20240330094833  version.ini
ESP32ProLC/CameraDisplay/: .cproject  .project  partitions.csv  sdkconfig  sdkconfig.old
ESP32ProLC/tcp_client/: .cproject
ESP32ProLC/timer_group/: .cproject  .project  sdkconfig
ESP32ProLC/udp_client/: .cproject  .project  sdkconfig
ESP32ProLC/web/: .cproject  .project  sdkconfig  sdkconfig.old
ESP32ProLC/web/main/: APP_LVGL910UI.c  APP_NVS.cpp  APP_OEMScreenDraw.cpp  APP_OEMparser.cpp  APP_SocketClient.cpp  CMakeLists.txt  HzLib.c  app_main.cpp  blufi_example_main.c  blufi_security.c  idf_component.yml
ESP32ProLC/web/main/include/: App_OEMType.cpp  App_OEMType.h
ESPBurner/: iF11P.PrjPcb  iF11P.PrjPcbStructure  iF11P.PrjPcbVariants  iF11P.SchDoc
ESPBurner/__Previews/: iF11P.SchDocPreview
ESP_QRcode-master/ESP_QRcode-master/: README.md  library.json
StompClient-master/wss_arduino/: StompClient.h  wss_arduino.ino
THT-Face/: CMakeLists.txt  partition data .txt  partitions.csv  sdkconfig  sdkconfig.old
THT-Face/doc/: CMD list of Face attendence  (version 1).xlsb.xlsx  CMD list of Face attendence .xlsx  CMD list of iF11.xlsb - Copy.xlsx  Device Configuration CMD.docx  pcb problem .xlsx
THT-Face/main/: CMakeLists.txt  app_main.cpp  app_main.hpp  blufi_example_main.c  blufi_init.c  event_logic.cpp  event_logic.hpp
THT-Face/main/Conectivity/: Conectivity.c  Conectivity.h  ble_spp_server.c  ble_spp_server.h  blufi_example.h  blufi_example_main.c  blufi_init.c  blufi_security.c
THT-Face/main/FATFS/: fs.c  fs.h
THT-Face/main/StomeClient/: StomeClient.c  StomeClient.h
THT-Face/main/Storage/: fs.c  fs.h  mynvs.c  mynvs.h
THT-Face/main/WssClient/: WssClient.c  WssClient.h
THT-Face/main/cloudEvent/: cloudEvent.c  cloudEvent.h
THT-Face/main/dataHandler/: dataHandler.c  dataHandler.h
THT-Face/main/enrol/: enrol.c  enrol.h
THT-Face/main/time/: time.c  time.h
ble50_security_server/: sdkconfig  sdkconfig.old
ble_spp_server/: sdkconfig
ble_spp_server/main/: ble_spp_server_demo.c
blufi/: sdkconfig
doc/: CMD list of Face attendence .xlsx  Device Configuration CMD.docx  bird.txt  bird_new.txt  cmd list.xlsx  face data.txt
https_mbedtls/: sdkconfig
lvgl_bar/: sdkconfig
lvgl_img/: sdkconfig
spiffs/: sdkconfig
tcp_client/: sdkconfig
tcp_server/: sdkconfig  sdkconfig.old
timeWatch/: partitions.csv  sdkconfig  sdkconfig.old
timeWatch/main/: CMakeLists.txt  blufi_example_main.c  main.c
timeWatch/main/Connectivity/: blufi_example.h  blufi_example_main.c
timeWatch/main/Time/: mytime.c  mytime.h
timeWatch/main/mylvgl/: mylvgl.c  mylvgl.h
websocket/: sdkconfig
wss/: doc.txt  sdkconfig  sdkconfig.old  wss ca pass.txt  wss info .txt
(+3364 files in other folders)
