
 idf_component_register(SRCS 
                             "main.c"
                             "Connectivity/blufi_example_main.c"
                             "Connectivity/blufi_security.c"
                             "Connectivity/blufi_init.c"
                             "Time/mytime.c"
                             "mylvgl/mylvgl.c"

                    INCLUDE_DIRS ".")